<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imagebayam" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card1"
                android:layout_marginTop="-60dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/postmakanan1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/postmakanan1"
                    android:textColor="@color/textdark"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/waktumakanan1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="38dp"
                    android:text="@string/waktumakanan1"
                    android:textColor="@color/colorPrimary" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/select"
                    android:layout_marginTop="63dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

                <TextView
                    android:id="@+id/desmakanan1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="73dp"
                    android:text="@string/desmakan1"
                    android:textColor="@color/textmedium" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/card2"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imagestrawberry" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card3"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="-60dp"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/postmakanan2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/postmakanan2"
                    android:textColor="@color/textdark"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/waktumakanan2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="38dp"
                    android:text="@string/waktumakanan2"
                    android:textColor="@color/colorPrimary" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="63dp"
                    android:src="@drawable/select" />

                <TextView
                    android:id="@+id/desmakanan2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="73dp"
                    android:text="@string/desmakan2"
                    android:textColor="@color/textmedium" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card4"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/coming"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>